[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixcake-use"
version = "0.1.0"
description = "Local PixCake reverse-engineering probes and automation helpers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Leo" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]
# Approximate, offline graded previews (the `photos --graded` path). RAW decode
# itself uses macOS `sips` and needs nothing here.
render = ["pillow>=10", "numpy>=1.24"]

[project.scripts]
pixcake-use = "pixcake_use.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pixcake_use"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

